# tmr-client

./: Cargo.toml  README.md
examples/: create-balanced-trade.rs  create-trade-towards-allocation.rs  create-trade.rs  show-data.rs  simple-client.rs
examples/devel/: introspect.rs
manual-request/: 02-auth.sh  03-mcp-init.sh
scripts/manual-request/: .gitignore  01-discover.sh  02-auth.sh  03-mcp-init.sh  03-refresh.sh  functions.sh
scripts/montrose-api/: .gitignore  api.txt  check-for-updates.sh
src/: client.rs  cred_store.rs  lib.rs  main.rs  oauth_handler.rs  tools.rs
src/res/: default_callback.html
src/tmr/: client.rs  cred_store.rs  mod.rs  oauth_handler.rs  result.rs  tools.rs
tmr-client/: Cargo.toml
tmr-client-sample/: Cargo.toml  LICENSE
tmr-client-sample/src/: main.rs
tmr-client/src/: client.rs  oauth_handler.rs  result.rs  tools.rs
