[workspace]
resolver = "3"
members = ["tmr-client", "tmr-client-sample"]

[workspace.dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
async-trait = "0.1.89"
axum = "0.8.8"
etcetera = "0.11.0"
oauth2 = "5.0.0"
reqwest = "0.13.2"
# Should be version = "1.3.0", but it provides no way to construct CredentialStorage
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "52c93e9508e2a523ca61f81c55b4cd67c8664ccc", default-features = false, features = [
    "transport-async-rw",
    "client",
    "reqwest",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
    "tower",
    "auth",
] }
rust_decimal = { version = "1.40.0", features = ["macros"] }
serde = "1.0.228"
serde_json = "1.0.149"
serde_with = "3.18.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = [
    "io-std",
    "macros",
    "rt-multi-thread",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["serde"] }
webbrowser = "1.2.0"
