[package]
name = "tmr-client"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
async-trait = "0.1.89"
axum = "0.8.8"
etcetera = "0.11.0"
oauth2 = "5.0.0"
reqwest = "0.13.2"
# Using custom branch that supports using client secret in OAuth refresh flow
rmcp = { git = "https://github.com/thomasa88/rmcp-rust-sdk.git", rev = "4e228e37a69a5bb94ca857107a0b997d9ad2d461", default-features = false, features = [
    "transport-async-rw",
    "client",
    "reqwest",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
    "tower",
    "auth",
] }
rust_decimal = { version = "1.40.0", features = ["macros"] }
serde = "1.0.228"
serde_json = "1.0.149"
serde_with = "3.18.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = [
    "io-std",
    "macros",
    "rt-multi-thread",
] }
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["serde"] }
webbrowser = "1.2.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[[example]]
name = "devel-introspect"
path = "examples/devel/introspect.rs"